--- a/Employee Management System/employee_management_frontend/angular-frontend/src/app/employee-details/employee-details.component.html
+++ b/Employee Management System/employee_management_frontend/angular-frontend/src/app/employee-details/employee-details.component.html
@@ -1,15 +1,17 @@
 <h3>View Employee Details</h3>
-<div>
+<div class="container flex-center">
   <div>
-    <label><b> First Name:</b></label
-    >{{ employee.fname }}
-  </div>
-  <div>
-    <label><b> Last Name:</b></label
-    >{{ employee.lname }}
-  </div>
-  <div>
-    <label><b> Email:</b></label
-    >{{ employee.email }}
+    <div>
+      <label><b> First Name:</b></label
+      >{{ employee.fname }}
+    </div>
+    <div>
+      <label><b> Last Name:</b></label
+      >{{ employee.lname }}
+    </div>
+    <div>
+      <label><b> Email:</b></label
+      >{{ employee.email }}
+    </div>
   </div>
 </div>
