--- a/Employee Management System/employee_management_frontend/angular-frontend/src/app/employee-list/employee-list.component.html
+++ b/Employee Management System/employee_management_frontend/angular-frontend/src/app/employee-list/employee-list.component.html
@@ -1,37 +1,43 @@
 <h2>Employee List</h2>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Email Id</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let employee of employees">
-      <td>{{ employee.fname }}</td>
-      <td>{{ employee.lname }}</td>
-      <td>{{ employee.email }}</td>
-      <td>
-        <button (click)="updateEmployee(employee.id)" class="btn btn-info">
-          Update
-        </button>
-        <button
-          (click)="deleteEmployee(employee.id)"
-          class="btn btn-danger"
-          style="margin-left: 10px"
-        >
-          Delete
-        </button>
-        <button
-          (click)="employeeDetails(employee.id)"
-          class="btn btn-info"
-          style="margin-left: 10px"
-        >
-          View
-        </button>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="container flex-center">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email Id</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let employee of employees">
+        <td id="text">{{ employee.fname }}</td>
+        <td id="text">{{ employee.lname }}</td>
+        <td id="text">{{ employee.email }}</td>
+        <td>
+          <button
+            (click)="updateEmployee(employee.id)"
+            class="btn btn-info"
+            style="color: white"
+          >
+            Update
+          </button>
+          <button
+            (click)="deleteEmployee(employee.id)"
+            class="btn btn-danger"
+            style="margin-left: 10px"
+          >
+            Delete
+          </button>
+          <button
+            (click)="employeeDetails(employee.id)"
+            class="btn btn-info"
+            style="margin-left: 10px; color: white"
+          >
+            View
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
