--- a/Employee Management System/employee_management_frontend/angular-frontend/src/app/app.component.html
+++ b/Employee Management System/employee_management_frontend/angular-frontend/src/app/app.component.html
@@ -22,6 +22,6 @@
 </div>
 <footer class="footer">
   <div class="container">
-    <span>All Rights Reserved</span>
+    <span>All Rights Reserved @2022</span>
   </div>
 </footer>
